css: Fix overflow handling in the time-grid
grid-gap seems to negate the effect of minmax used to
prevent a grid blowout. It's also wrong to apply it
on the overlay anyway..

--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -44,24 +44,25 @@
 
   .header {
     display: grid;
-    grid-gap: 1px;
+    align-items: flex-end;
     border-left: 1px solid transparent;
-    border-right: 1px solid transparent;
     grid-template-columns: repeat(var(--primaryColumns), minmax(var(--minimumPrimaryColumnWidth), 1fr));
 
     .column-title {
       text-align: center;
+      border-right: 1px solid transparent;
     }
   }
 
   .sidebar {
     display: grid;
-    grid-gap: 1px;
+    border-top: 1px solid transparent;
     grid-template-rows: repeat(var(--primaryRows), var(--primaryRowHeight));
 
     .row-title {
       text-align: right;
       padding-right: .5em;
+      border-bottom: 1px solid transparent;
 
       .hour,
       .week-no {
@@ -70,7 +71,7 @@
 
       .hour {
         font-size: .857em;
-        margin-top: -.75em;
+        margin-top: ~"calc(-.75em - 1px)"; // -(Desired offset + border-width)
       }
     }
   }
@@ -84,16 +85,26 @@
   .overlay {
     display: grid;
     overflow: hidden;
-    grid-gap: 1px;
     grid-template-rows: repeat(~"calc(var(--primaryRows) * var(--rowsPerStep))", var(--stepRowHeight));
     grid-template-columns: repeat(~"calc(var(--primaryColumns) * var(--columnsPerStep))", minmax(var(--minimumStepColumnWidth), 1fr));
-    border: 1px solid transparent;
+    border-width: 1px 0 0 1px;
+    border-style: solid;
+    border-color: transparent;
+
+    .entry {
+      // TODO: This lets all entries have a margin, even those that don't overlap a step's border (multiple entries in the same step)
+      //       Should depend on a class which indicates that it overlaps a step's border (the grid should be able to calculate this)
+      margin: 0 1px 1px 0;
+    }
   }
 
   .step {
     position: relative;
     grid-row-end: span var(--rowsPerStep);
     grid-column-end: span var(--columnsPerStep);
+    border-width: 0 1px 1px 0;
+    border-style: solid;
+    border-color: transparent;
   }
 
   .step,
@@ -199,7 +210,7 @@
 
   .grid,
   .overlay {
-    border-left: none;
+    border-left-color: transparent;
   }
 }
 
@@ -213,7 +224,7 @@
 
   .grid,
   .overlay {
-    border-left: none;
+    border-left-color: transparent;
   }
 }
 
@@ -223,16 +234,16 @@
   grid-template-rows: var(--headerHeight) minmax(0, 1fr);
 
   .header {
-    grid-area: ~"1 / 2 / 2 / 3";
+    grid-area: ~"1 / 2 / 3 / 3";
   }
 
   .sidebar {
-    grid-area: ~"2 / 1 / 3 / 2";
+    grid-area: ~"3 / 1 / 4 / 2";
   }
 
   .grid,
   .overlay {
-    grid-area: ~"2 / 2 / 3 / 3";
+    grid-area: ~"3 / 2 / 4 / 3";
   }
 
   .overlay {
@@ -308,12 +319,11 @@
   }
 
   .grid {
-    background-color: @gray-lighter;
     border-color: @gray-lighter;
   }
 
   .step {
-    background-color: @body-bg-color;
+    border-color: @gray-lighter;
     color: @text-color-light;
   }
 
